<resources>
    <string name="app_name">OTOT</string>
    <!-- Splash -->
    <string name="splash_logo">Splash Logo</string>
    <string name="splash_spinner">Splash Spinner</string>
    <string name="get_started_logo">Get Started Logo</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="get_started_slogan">Your all-in-one sports companion.\nTrack, set goals, and connect.\nLet the journey begin.</string>
    <string name="signup">Signup</string>
    <string name="if_you_already_have_an_account">If you already have an account</string>
    <string name="login">Login</string>
    <string name="greeting">Hi, Welcome Back!</string>
    <string name="sub_greeting">Hello again, you\'ve been missed</string>
    <string name="google_login">Please Login with Google Below</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="create_account">Create Account</string>
    <string name="connect_with_your_friends_today">Connect with your friends today</string>
    <string name="google_signup">Please sign up with Google below</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="personalized">Personalized</string>
    <string name="sub_personalized">Time to make your dreams come true</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="submit">Submit</string>
    <!-- Profile -->
    <string name="profile_preview">Profile Preview</string>
    <string name="insert_image">Insert Image</string>
    <string name="gender">Gender</string>
    <string name="default_web_client_id">332237458692-tumkfqudjjmvoqidiolk3v3cpierh3k9.apps.googleusercontent.com</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_history_fragment">Hello History Fragment</string>
</resources>