<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".LoginFragment"
    tools:layout_editor_absoluteX="36dp"
    tools:layout_editor_absoluteY="16dp"
    android:padding="0dp">

    <!-- Logo -->
    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/splash_logo"
        android:src="@drawable/splash_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Greeting Text -->
    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_logo" />

    <!-- Sub Greeting Text -->
    <TextView
        android:id="@+id/sub_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/connect_with_your_friends_today"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.130"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting" />

    <!-- Signup Box -->
    <LinearLayout
            android:id="@+id/signup_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/translucent_card"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="32dp"
            app:layout_constraintTop_toBottomOf="@id/sub_greeting"
            tools:layout_editor_absoluteX="16dp">

            <LinearLayout
                android:id="@+id/email_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Email Input -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email Address"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_medium" />

                <EditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="your.email@gmail.com"
                    android:layout_marginHorizontal="4dp"
                    android:background="@drawable/auth_form"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white_semi_transparent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/password_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <!-- Password Input with Toggle -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Password"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_medium" />

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/auth_form"
                    android:layout_marginHorizontal="4dp"
                    android:hint="Password"
                    android:textColorHint="@color/white_semi_transparent"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />
            </LinearLayout>

            <!-- Remember me -->
            <LinearLayout
                android:id="@+id/remember_me_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/remember_me_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"/>

                <TextView
                    android:id="@+id/remember_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="8dp"
                    android:padding="4dp"
                    android:text="Remember me"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Signup Button -->
            <TextView
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/auth_button"
                android:gravity="center"
                android:textSize="16sp"
                android:padding="12dp"
                android:text="@string/signup"
                android:fontFamily="@font/roboto_bold"
                android:textColor="#2A2828" />

            <!-- OR Divider -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="6dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="OR"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="@color/white" />
            </LinearLayout>

            <!-- Google Signup Button -->
            <LinearLayout
                android:id="@+id/googleSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/auth_google"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/googleIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/google" />

                <TextView
                    android:id="@+id/googleSignupText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:padding="4dp"
                    android:text="Continue with Google"
                    android:textAllCaps="false"
                    android:textColor="#2A2828"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

    <!-- Sign Up Text -->
    <LinearLayout
        android:id="@+id/sign_up_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/signup_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/have_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginHorizontal="4dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_marginTop="2dp"
                android:layout_marginHorizontal="4dp"
                android:background="@color/white" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>